wp-content/themes/safedescents/resources/assets/styles/components/_coverage-map.scss
.map-container {
  background: url('../images/map-bg.jpg');
  background-size: cover;
  background-position: center;

  aside {
    background: $color-slate;

    .coverage-details {
      background: white;
      padding: 20px;
      margin: 2em;
      text-align: center;
      box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.6);
    }

    .coverage-state {
      display: none;
    }

    .state-name {
      @extend h4;

      margin: 0.5em 0 1em;
      line-height: 1em;
    }

    .price {
      font-family: "Montserrat", sans-serif;
      font-weight: 500;
      font-size: 40px;
    }

    .duration {
      font-family: "Montserrat", sans-serif;
      text-transform: uppercase;
      font-size: 20px;
    }

    .consent {
      font-size: 12px;
      line-height: 1.2em;
    }

    .your-state input {
      margin-bottom: 0;
    }
  }
}

#coverage_select {
  display: none;
  width: 90%;
  margin: 10px auto;
  height: 38px !important;
  -webkit-border-radius: 0;
  border: 0;
  outline: 1px solid $color-medium-grey !important;
  outline-offset: -1px;
}

#map {
  path {
    fill: $color-dark-slate;
    cursor: pointer;

    &:hover {
      fill: $color-slate;
    }
  }

  .state-active {
    fill: $color-dark-blue;

    &:hover {
      fill: $color-sky-blue;
    }
  }
}

